--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
     <title>Never Know What to Eat</title>
 </head>
 <body>
-    <div class="intro" id="intro">
-        <div id="btn_log_in">
-          <a href="login.html">Log In</a>
-        </div>
-        <img class="logo" src=logo/logo_small.png alt="Logo">
-        <h1 class="intro_title"> Never Know What to Eat</h1>
-        <h2 class="intro_subtitle">Subscribe and get a takeaway suprise delivered to you so you can try new food!</h2>
 
+  <header>
+    <nav class="nav">
+      <ul class="nav_list">
+        <li class="nav_item"><a href="index.html" class="nav_link">Home</a></li>
+        <li class="nav_item"><a href="service.html" class="nav_link">Our Service</a></li>
+        <li class="nav_item"><a href="contactUs.html" class="nav_link">Contact Us</a></li>
+        <li class="nav_item"><a href="login.html" class="nav_link">Log In</a></li>
+      </ul>
+    </nav>
+    <img class="logo" src=logo/logo_small.png alt="Logo">
+    <h1 class="intro_title"> Never Know What to Eat</h1>
+    <h2 class="intro_subtitle">Subscribe and get a takeaway suprise delivered to you so you can try new food!</h2>
+  </header>
+
+    <div class="intro" id="intro">
         <p class=intro_company_summary>
             We are located in Newcastle and we provide you with a takeaway.
              This will allow you to try different cuisines and also support other places 
@@ -32,7 +40,6 @@
     </div>
 
     <div class="slideshow-container">
-
         <div class="mySlides fade">
           <img class="img" src="img/food1.jpg">
         </div>
@@ -53,13 +60,13 @@
             <img class="img" src="img/food5.jpg">
           </div>
     </div>
+
     <div style="text-align:center">
         <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
         <span class="dot"></span> 
-    
       </div>
 
     <div class="partners" id="partners"> 
@@ -89,6 +96,7 @@
             be different.</strong>
         </p>
     </div>
+
     <footer class="footer">
         <a href="mailto:contact-me@angelngamantang.com" class="footer_email"> contact-me@angelngamantang.com</a>
         
@@ -101,7 +109,7 @@
         </ul>
 
         <p class="footer_copyright">© 2020 by Never Know What to Eat</p>
-        <p class="footer_created_by"> Website created by  <a href="https://www.angelngamantang.com/">Angel Nga Man Tang</a></p>
+        <p class="footer_created_by"> Website created by  <a href="https://www.angelngamantang.com/" class="created">Angel Nga Man Tang</a></p>
     </footer>
 
     <script src="js/index.js"></script>
