--- a/login.html
+++ b/login.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
+  <link rel="shortcut icon" type="image/png" href="img/favIcon.png">
+
   <link rel="stylesheet" href="css/styleLogIn.css">
 
 </head>
