--- a/service.html
+++ b/service.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
 
+  <link rel="shortcut icon" type="image/png" href="img/favIcon.png">
+  
     <link rel="stylesheet" href="css/style.css">
 
     <title>Our Service | Never Know What to Eat</title>
