Login and Reset Updates

--- a/login.html
+++ b/login.html
@@ -17,6 +17,8 @@
 
   <link rel="stylesheet" href="css/styleLogIn.css">
 
+
+  
 </head>
 <body>
   <header>
@@ -43,7 +45,9 @@
           <label class="remember-me"><input type="checkbox" name="">Remember me</label>
           <a href="password_reset.html">Forgot your password?</a>
         </div>
-        <input class="btn" name="" value="LOGIN" >
+        <button id="btn" class="btn" >Log In</button>
+
+
         <div class="options-02">
           <p>Not Registered? <a href="#">Create an Account</a></p>
         </div>
@@ -88,6 +92,8 @@
       }, "slow");
     });
     </script>
+  
+
 
   </body>
 </html>
