--- a/service.html
+++ b/service.html
@@ -59,7 +59,7 @@
 
            <strong class="service_price">£14.00 Per Person Per Week</strong>
 
-           <h2 class="service_subtitle">Weekly Subscription</h2>
+           <h2 class="service_subtitle">Monthly Subscription</h2>
         <p class="service_description">Our weekly subscription allows you to choose a day for the takeaway to be delivered
            to you and we will randomly selection the takeaway from our list of partners and the
            food which will be enough for the number of people selected. The food provided will
